--- a/style.css
+++ b/style.css
@@ -23,11 +23,14 @@ nav {
     color: hsl(0, 0%, 100%);
     padding: 0px 26px;
     text-decoration: none;
-    
+}
+.navlink:hover {
+    text-decoration: underline;
+    font-weight: bold;
 }
 main {
     background-color: hsl(218, 28%, 13%);
-    padding-bottom: 150px;
+    padding-bottom: 10px;
 }
 #intro{
     background-color: hsl(217, 28%, 15%);
@@ -42,8 +45,9 @@ main {
     padding: 14px 70px;
     margin: 10px 0px 50px 0px;
     border-radius: 50px;
-    border: 0px transparent;
+    border: none;
     outline: none;
+    cursor: pointer;
 }
 #products {
     display: grid;
@@ -64,15 +68,14 @@ main {
 #fylo {
     color: hsl(176, 68%, 64%);
 }
+#fylo:hover {
+    color: white;
+}
 #quotes {
-    position: absolute;
-    left: 30px;
-    top: 343%;
     margin-left: 80px;
 }
 #testimonials {
-    margin: 100px 100px;
-    position: relative;
+    margin: 0px 100px 100px 100px;
     display: flex;
     flex-direction: row;
     font-size: 12px;
@@ -96,12 +99,10 @@ main {
 #email{
     background-color: hsl(219, 30%, 18%);
     padding: 20px 40px;
-    margin: 80px 250px 0px 250px;
+    margin: 0px 250px 0px 250px;
     text-align: center;
     box-shadow: 1px 1px 5px rgba(139, 132, 132, 0);
-    position: absolute;
-    left: 30px;
-    top: 400%;
+    
 }
 #email-input {
     border-radius: 50px;
@@ -110,7 +111,7 @@ main {
     margin: 10px 15px 50px 0px;
     outline: none;
 }
-button {
+#free {
     background-image: linear-gradient(to right, hsl(176, 68%, 64%), hsl(198, 60%, 50%));
     color: hsl(0, 0%, 100%);
     padding: 14px 20px;
@@ -118,28 +119,31 @@ button {
     border-radius: 50px;
     border: 0px transparent;
     outline: none;
+    cursor: pointer;
 }
 footer {
     background-color: hsl(216, 53%, 9%);
 }
 #footer-logo {
-    margin: 170px 100px 0px 100px;
+    margin: 40px 100px 0px 100px;
 }
 #footer-text{
     margin: 50px 100px 0px 100px;
-    padding-bottom: 50px;
+    padding-bottom: 80px;
     display: grid;
-    grid-template-columns: 280px 150px 150px 150px 150px;
-    grid-column-gap: 50px;
+    grid-template-columns: 280px 200px 100px 100px 100px;
+    grid-column-gap: 80px;
 }
 #footer-location {
     float: left;
     margin-top: 20px;
-    margin-right: 10px;
+    padding-right: 10px;
 }
 #footer-phone {
     float: left;
+    padding-right: 10px;
 }
 #footer-email {
     float: left;
+    padding-right: 10px;
 }
