--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ main {
 
 #productive {
   display: flex;
-  align-items: center;   
+  align-items: center;
   margin: 100px 80px;
 }
 
@@ -97,70 +97,81 @@ main {
   flex-direction: row;
   font-size: 12px;
 }
+
 .profiles {
-    display: flex;
-    flex-direction: column;
-    background-color: hsl(219, 30%, 18%);
-    padding: 20px;
-    margin: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: hsl(219, 30%, 18%);
+  padding: 20px;
+  margin: 20px;
 }
+
 .profile-img {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
 }
+
 .figure {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
-#email{
-    background-color: hsl(219, 30%, 18%);
-    padding: 20px 40px;
-    margin: 0px 250px 0px 250px;
-    text-align: center;
-    box-shadow: 1px 1px 5px rgba(139, 132, 132, 0);
-    
+
+#email {
+  background-color: hsl(219, 30%, 18%);
+  padding: 20px 40px;
+  margin: 0 250px;
+  text-align: center;
+  box-shadow: 1px 1px 5px rgba(139, 132, 132, 0);
 }
+
 #email-input {
-    border-radius: 50px;
-    border: none;
-    padding: 14px 200px 14px 20px;
-    margin: 10px 15px 50px 0px;
-    outline: none;
+  border-radius: 50px;
+  border: none;
+  padding: 14px 200px 14px 20px;
+  margin: 10px 15px 50px 0;
+  outline: none;
 }
+
 #free {
-    background-image: linear-gradient(to right, hsl(176, 68%, 64%), hsl(198, 60%, 50%));
-    color: hsl(0, 0%, 100%);
-    padding: 14px 20px;
-    margin: 10px 0px 50px 0px;
-    border-radius: 50px;
-    border: 0px transparent;
-    outline: none;
-    cursor: pointer;
+  background-image: linear-gradient(to right, hsl(176, 68%, 64%), hsl(198, 60%, 50%));
+  color: hsl(0, 0%, 100%);
+  padding: 14px 20px;
+  margin: 10px 0 50px 0;
+  border-radius: 50px;
+  border: 0 transparent;
+  outline: none;
+  cursor: pointer;
 }
+
 footer {
-    background-color: hsl(216, 53%, 9%);
+  background-color: hsl(216, 53%, 9%);
 }
+
 #footer-logo {
-    margin: 40px 100px 0px 100px;
+  margin: 40px 100px 0 100px;
 }
-#footer-text{
-    margin: 50px 100px 0px 100px;
-    padding-bottom: 80px;
-    display: grid;
-    grid-template-columns: 280px 200px 100px 100px 100px;
-    grid-column-gap: 80px;
+
+#footer-text {
+  margin: 50px 100px 0 100px;
+  padding-bottom: 80px;
+  display: grid;
+  grid-template-columns: 280px 200px 100px 100px 100px;
+  grid-column-gap: 80px;
 }
+
 #footer-location {
-    float: left;
-    margin-top: 20px;
-    padding-right: 10px;
+  float: left;
+  margin-top: 20px;
+  padding-right: 10px;
 }
+
 #footer-phone {
-    float: left;
-    padding-right: 10px;
+  float: left;
+  padding-right: 10px;
 }
+
 #footer-email {
-    float: left;
-    padding-right: 10px;
+  float: left;
+  padding-right: 10px;
 }
